# capsim

./: -m  .dockerignore  .env.example  .env_example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG_TUNING.md  DASHBOARD_FIX_REPORT.md  Dockerfile  Dockerfile.browser-push  Makefile  QA_TEST_PLAN.md  README.md  README_SIMULATION.md  SIMULATION_REPORT.md  TECH_LEAD_REVIEW.md  agents_profession_dump.csv  alembic.ini  baseline.yaml  check_dashboards.py  debug_trend_receptivity.py  demo_simulation.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_simulation_6h_300_agents.py  run_simulation_final_test.py  show_simulation_results.py  test_fixed_simulation.py  test_time_advance.py  test_timestamp_analysis.py  test_v1_9_compliance.py
.ipynb_checkpoints/: agent_attribute_dynamics_fixed-checkpoint.ipynb  Симулятор капитализма агентные динамики checkpoint-checkpoint.ipynb
alembic/: env.py
capsim/: __init__.py  __main__.py  main.py
config/: actions.yaml  database.ini.template  database.ini.test  default.yml  economic_balance.yaml  env.example  levers.yaml  simulation.yaml  trend_affinity.json
docs/: ARCHITECTURE_CONSOLIDATED.md  DATABASE_CONSOLIDATED.md  ECONOMIC_MODEL_V2.md  PERFORMANCE_CONSOLIDATED.md  README.md  Requirements.md  SPRINT_0_SUMMARY.md  architecture_overview.md  configuration.md  database-schema-requirements.md  database_monitoring.md  devops_validation_v1_8_schema.md  email_setup.md  environment-variables.md  events.md  events_fix_summary.md  logs_realtime.md  monitoring.md  operating.md  (+10 more)
(+159 files in other folders)
