[tool.poetry]
name = "capsim"
version = "0.1.0"
description = "Data Generator Simulation"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.0"
typer = "^0.9.0"
pyyaml = "^6.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
prometheus-client = "^0.19.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
psutil = "^5.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"
faker = "^25.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 